[package]
name = "carbide-agent"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[lib]
name = "agent"

[[bin]]
# TODO: rename to carbide-dpu-agent
name = "forge-dpu-agent"
path = "src/main.rs"

[dependencies]

# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
config-version = { path = "../../common/config-version" }
carbide-certs = { path = "../certs" }
carbide-dpu-agent-utils = { path = "../utils"}
carbide-dpu-remediation = { path = "../remediation"}
carbide-host-support = { path = "../../common/host-support" }
carbide-http-connector = { path = "../../common/http-connector" }
carbide-network = { path = "../../common/network" }
carbide-systemd = { path = "../systemd" }
carbide-tls = { path = "../../common/tls" }
carbide-uuid = { path = "../../common/uuid" }
carbide-version = { path = "../../common/version" }
carbide-health-report = { path = "../../common/health-report" }
carbide-rpc = { path = "../../rpc" }
carbide-utils = { path = "../../common/utils" }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

#these are alphabetized
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-server = { features = ["tls-rustls"] , workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
containerd-client = { workspace = true }
data-encoding = { workspace = true }
diff = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
governor = { workspace = true }
gtmpl = { workspace = true }
gtmpl_derive = { workspace = true }
gtmpl_value = { workspace = true }
hickory-resolver = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
humantime = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["client-legacy"] }
ipnetwork = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
mac_address = { workspace = true }
mockall = { workspace = true }
netlink-packet-route = { workspace = true }
nix = { features = ["fs", "user"] , workspace = true }
nonzero_ext = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
opentelemetry_sdk = { workspace = true, features = ["spec_unstable_metrics_views"] }
prometheus = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
resolv-conf = { workspace = true }
rtnetlink = { workspace = true }
rustls = { workspace = true }
serde = { features = ["derive"] , workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
similar = { workspace = true }
surge-ping = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { features = ["trace"] , workspace = true }
tracing = { workspace = true }
uuid = { features = ["v4", "serde"] , workspace = true }
uzers = { workspace = true }
version-compare = { workspace = true }
#these are alphabetized

[build-dependencies]
carbide-version = { path = "../../common/version" }

[dev-dependencies]
ctor = { workspace = true }
prost = { workspace = true }
reqwest = { default-features = false, features = ["rustls-tls", "stream"] , workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }

[lints]
workspace = true
