[package]
name = "carbide-certs"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[lib]
name = "forge_certs"

[dependencies]
eyre = "*"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.3"
tonic = { workspace = true }
tracing = "*"

# [local-dependencies]
carbide-host-support = { path = "../../common/host-support" }
carbide-tls = { path = "../../common/tls" }
carbide-rpc = { path = "../../rpc" }

[lints]
workspace = true
