[package]
name = "forge-dpu-remediation"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
eyre = "*"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.3"
tonic = { workspace = true }
tracing = "*"
tokio = { workspace = true }
uuid = "1"

# [local-dependencies]
forge-dpu-agent-utils = { path = "../utils" }
forge-tls = { path = "../../common/tls" }
forge-uuid = { path = "../../common/uuid"}
rpc = { path = "../../rpc" }
