[package]
name = "carbide-dpu-remediation"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[lib]
# TODO: rename to carbide_dpu_remediation in source
name = "forge_dpu_remediation"

[dependencies]
eyre = "*"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.3"
tonic = { workspace = true }
tracing = "*"
tokio = { workspace = true }
uuid = "1"

# [local-dependencies]
carbide-dpu-agent-utils = { path = "../utils" }
carbide-tls = { path = "../../common/tls" }
carbide-uuid = { path = "../../common/uuid"}
carbide-rpc = { path = "../../rpc" }
