[package]
name = "forge-systemd"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
eyre = "*"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.3"
tokio = { workspace = true }
tonic = { workspace = true }
tracing = "*"

# [local-dependencies]
forge-host-support = { path = "../../common/host-support" }
rpc = { path = "../../rpc" }
