[package]
name = "carbide-systemd"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

# TODO: rename to carbide_systemd in source
[lib]
name = "forge_systemd"

[dependencies]
eyre = "*"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.3"
tokio = { workspace = true }
tonic = { workspace = true }
tracing = "*"

# [local-dependencies]
carbide-host-support = { path = "../../common/host-support" }
carbide-rpc = { path = "../../rpc" }

[lints]
workspace = true
