[package]
name = "carbide-dpu-agent-utils"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

# TODO: rename to carbide_dpu_agent_utils in source
[lib]
name = "forge_dpu_agent_utils"

[dependencies]
eyre = "*"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.3"
tonic = { workspace = true }
tracing = "*"

# [local-dependencies]
carbide-tls = { path = "../../common/tls" }
carbide-rpc = { path = "../../rpc" }
