[package]
name = "api-test-helper"
version = "0.1.0"
description = "Helpers to launch carbide-api for integration testing"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
chrono = "0.4.34"
eyre = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serial_test = "3"
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mac_address", "ipnetwork", "uuid", "migrate", "postgres", "chrono", "macros", "json"] }
tempfile = "3"
tokio.workspace = true
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }
futures = "0.3"
itertools = "0.14"
ctor = "0.2"
temp-dir = "0.1.14"
rand = "0.8.5"
lazy_static = "1.5.0"
uuid = "1.17.0"


# [local-dependencies]
agent = { path = "../../bluefield/agent" }
bmc-mock = { path = "../../dev/bmc-mock" }
carbide-api = { path = "../../api" }
forge-version = { path = "../version" }
rpc = { path = "../../rpc" }
machine-a-tron = { path = "../../dev/machine-a-tron" }
forge-tls = { path = "../tls" }
forge_secrets = { path = "../secrets" }
utils = { path = "../utils" }
metrics-endpoint = { path = "../metrics-endpoint" }

[build-dependencies]
forge-version = { path = "../version" }
